# Movaura

./: .gitignore  AUTHORS.md  INICIAR_MOVAURA.cmd  INSTALAR_DEPENDENCIAS.cmd  LEIA-ME-PRIMEIRO.txt  Movaura.cmd  MovauraStartup.vbs  README.md  THIRD_PARTY_NOTICES.txt  app.py  requirements-build.txt  requirements.txt
assets/: movaura.exe.manifest
cache/: __init__.py  wallpaper_cache.py
config/: partner-center.identity.example.json
core/: __init__.py  app_logging.py  app_rule_manager.py  benchmark.py  catalog.py  crash_report.py  desktop_host.py  desktop_probe.py  engine.py  explorer_repair.py  fullscreen_detector.py  gpu_info.py  hotkey_manager.py  json_store.py  license_manager.py  media_analyzer.py  monitor_manager.py  monitor_profile_manager.py  native_compositor.py  native_host.py  performance_advisor.py  performance_monitor.py  playlist_manager.py  plugin_manager.py  power_status.py  presentation_backend.py  presentation_validator.py  profile_manager.py  runtime_paths.py  scene_layers.py  scene_package.py  scene_presets.py  screensaver.py  self_test.py  session_state.py  settings.py  single_instance.py  startup_manager.py  support_report.py  system_wallpaper.py  (+9 more)
data/: catalog.json
docs/: AI_GENERATION.md  AI_QUEUE_LIFECYCLE_AUDIT.md  CERTIFICATION_NOTES.md  CI_ARTIFACT_VALIDATION.md  CI_REPRODUCIBILITY_REPORT.md  CI_VALIDATION_REPORT.md  CODEC_PATENT_RISK_REGISTER.md  EULA_DRAFT_EN_US.md  EULA_DRAFT_PT_BR.md  FFMPEG_BUILD_LOCK.md  FFMPEG_EXTERNAL_LIBRARY_MATRIX.md  FFMPEG_LGPL_REVIEW.md  FINAL_AUDIT_BASELINE.md  FINAL_LICENSE_AUDIT.md  FINAL_SECURITY_AUDIT.md  FINAL_STORE_READINESS_AUDIT.md  FINAL_TEST_REPORT.md  LEGAL_REVIEW_HANDOFF.md  LGPL_COMPLIANCE_GUIDE.md  LGPL_MSIX_TECHNICAL_ASSESSMENT.md  LICENSE_COMPLIANCE_TEST_REPORT.md  MANUAL_TEST_CHECKLIST.md  MANUAL_TEST_RESULTS.md  PARTNER_CENTER_RUNFULLTRUST_JUSTIFICATION.md  PARTNER_CENTER_SUBMISSION_CHECKLIST.md  PRIVACY_POLICY.md  PULL_REQUEST_DESCRIPTION.md  PYSIDE6_MIGRATION_INVENTORY.md  PYSIDE6_MIGRATION_REPORT.md  PYTHON_DEPENDENCY_LICENSE_MATRIX.md  QT_MODULE_LICENSE_MATRIX.md  STORE_LISTING_EN_US.md  STORE_LISTING_PT_BR.md  STORE_RELEASE_AUDIT.md  STORE_SUBMISSION.md  SUPABASE_BETA.md  (+12 more)
native_compositor_app/: CMakeLists.txt
native_compositor_app/src/: main.cpp
native_host/: CMakeLists.txt  README.md
native_host/include/: movaura_native_host.h
native_host/src/: movaura_native_host.cpp
native_host_app/: CMakeLists.txt
native_host_app/src/: main.cpp
(+124 files in other folders)
